@startuml FactoryMethod
'skinparam linetype ortho
skinparam linetype polyline

interface Product.Attr {
}
interface Product.Element {
}
interface Product.Text {
}
class ConcreteProduct.Attr_Impl {
}
class ConcreteProduct.Element_Impl {
}
class ConcreteProduct.Text_Impl {
}
interface Creator.Document {
    +[FactoryMethod] createAttribute(...)   : Attr*
    +[FactoryMethod] createElement(...)     : Element*
    +[FactoryMethod] createTextNode(...)    : Text*
}
class ConcreteCreator.Document_Impl {
    +[FactoryMethod] createAttribute(...)   : Attr*
    +[FactoryMethod] createElement(...)     : Element*
    +[FactoryMethod] createTextNode(...)    : Text*
}

Product.Attr        <|..    ConcreteProduct.Attr_Impl
Product.Element     <|..    ConcreteProduct.Element_Impl
Product.Text        <|..    ConcreteProduct.Text_Impl
Creator.Document    <|..    ConcreteCreator.Document_Impl
ConcreteProduct.Attr_Impl     <-    ConcreteCreator.Document_Impl   : .
ConcreteProduct.Element_Impl  <-    ConcreteCreator.Document_Impl   : instantiate
ConcreteProduct.Text_Impl     <-    ConcreteCreator.Document_Impl   : instantiate
@enduml